# NewsPulse_AI_Agent

./: .env  .env_example  .gitignore  Dockerfile  PRD - NewsPulse AI Agent.docx  env_instruction  pyproject.toml  pyproject_orig.toml  readme.md  readme_deployment_gcp.md  readme_setup_email_service.md  requirements.txt  session-for-retail.json
AI_Newsletter/: agent.py  agent_adelie.py  db_init.py  logger_config.py  newsletter_agents.py  prompt.py  schema.py  storage.py  utility.py  vectors.py
example_session/: end-end-session.json
