[project]
name = "newsletter"
version = "0.0.1"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.12"
dependencies = [
    "chromadb (==0.5.3)",
    "fastapi (==0.121.2)",
    "google-adk (==1.2.1)",
    "google-auth (==2.43.0)",
    "google-genai (==1.50.1)",
    "jinja2 (==3.1.0)",
    "uvicorn (==0.38.0)",
    "sqlalchemy (==2.0.44)",
    "google-cloud-aiplatform (==1.127.0)",
    "beautifulsoup4==4.12.3"
]


[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["AI_Newsletter*"]
exclude = ["session*", "tests*"]
